--- a/Prj02_DWeather/app/src/main/res/values/strings.xml
+++ b/Prj02_DWeather/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="location">&#xe602;</string>
     <string name="back">&#xe600;</string>
     <string name="menu">&#xe601;</string>
+    <string name="add">&#xe604;</string>
+
+    <!-- API URL -->
+    <string name="key">478855289bf843bea01cbbf983887878</string>
+    <string name="city_api">https://api.heweather.com/x3/citylist?search=allchina&amp;key=478855289bf843bea01cbbf983887878</string>
+    <string name="weather_icon_api">https://api.heweather.com/x3/condition?search=allcond&amp;key=478855289bf843bea01cbbf983887878</string>
+    <string name="wt_api_no_parm">https://api.heweather.com/x3/weather?</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
