--- a/Prj02_DWeather/app/src/main/res/values/strings.xml
+++ b/Prj02_DWeather/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">D Weather</string>
+    <string name="app_name">LOMO.天气</string>
 
     <!-- iconfont -->
     <string name="search">&#xe603;</string>
@@ -14,6 +14,6 @@
     <string name="weather_icon_api">https://api.heweather.com/x3/condition?search=allcond&amp;key=478855289bf843bea01cbbf983887878</string>
     <string name="wt_api_no_parm">https://api.heweather.com/x3/weather?</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="blank">  </string>
+
 </resources>
